--- a/shop.html
+++ b/shop.html
@@ -147,6 +147,126 @@
 
     </main>
     <!-- main part end -->
+    <section id="best_seller_all_product">            
+
+        <div class="container d-flex flex-wrap">
+
+            <div class="col-lg-3">
+                <div class="product_slider_item item1">
+
+                    <img src="./asset/image/index.image/NAP1.webp" alt="no image" class="img-fluid">
+                    <div class="tag item1_top">
+                        <div class="span_roteted text-start">
+                            <small >-45%</small>
+                        </div>
+                    </div>
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item item2">
+                    <img src="./asset/image/index.image/NAP_2.webp" alt="no image" class="img-fluid ster">
+                    <div class="tag item2_top">
+                        <div class="span_roteted">
+                            <small>New</small>
+                        </div>
+                    </div>
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item item3">
+                    <img src="./asset/image/index.image/NAP_3.webp" alt="no image" class="img-fluid">
+                    <div class="tag item3_top">
+                        <div class="span_roteted">
+                            <small>sale</small>
+                        </div>
+                    </div>
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item">
+                    <img src="./asset/image/index.image/NAP_4.webp" alt="no image" class="img-fluid">
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item item4">
+                    <img src="./asset/image/index.image/NAP_5.webp" alt="no image" class="img-fluid">
+                    <div class="tag item4_top">
+                        <div class="span_roteted">
+                            <small>new</small>
+                        </div>
+                    </div>
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item">
+                    <img src="./asset/image/index.image/NAP_6.webp" alt="no image" class="img-fluid">
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item item5">
+                    <img src="./asset/image/index.image/NAP_7.webp" alt="no image" class="img-fluid">
+                    <div class="tag item5_top">
+                        <div class="span_roteted">
+                            <small>sale</small>
+                        </div>
+                    </div>
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-lg-3">
+                <div class="product_slider_item">
+                    <img src="./asset/image/index.image/NAP_8.webp" alt="no image" class="img-fluid">
+                    <div class="product_info text-center">
+                        <span>$150.65</span>
+                        <h6>Lotion Shower gel</h6>
+                        <img src="./asset/image/index.image/ster.svg" alt="no image" class="img-fluid ster">
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
 
     <!-- footer part start -->
     <footer>
